# PacmanAndroid

./: .gitignore  .gitignore.swp  .gitignore~  .gitmodules  README.md  test.txt
android-client/: build.gradle  gradle.properties
android-client/app/: CMakeCache.txt  CMakeLists.txt  CMakeLists_new.txt  build.gradle
android-client/app/src/androidTest/java/threedouble/pacman/: ExampleInstrumentedTest.java
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/cpp/: Asset.h  Background.cpp  Background.h  Game.cpp  Game.h  GameRendererJNI.cpp  GameRendererJNI.h  Ghost.cpp  Ghost.h  IDrawable.h  Map.cpp  Map.h  Pacman.cpp  Pacman.h  PlayerConnectionClient.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Unit.cpp  Unit.h  Units.cpp  Units.h  asset_utils.cpp  asset_utils.h  buffer.cpp  buffer.h  client-udp.cpp  config.h  game.cpp  game.h  game_objects.cpp  game_objects.h  image.cpp  image.h  math_helper.h  matrix.h  platform_asset_utils.cpp  platform_asset_utils.h  platform_file_utils.h  (+7 more)
android-client/app/src/main/cpp/GameObjects/: BackGround.cpp  BackGround.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Unit.cpp  Unit.h
android-client/app/src/main/cpp/libodraw/: Rectangle.cpp  Rectangle.h  ShaderPrograms.cpp  ShaderPrograms.h  Shaders.cpp  Shaders.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  libodraw.h
android-client/app/src/main/cpp/libodraw/libpng/: pngrutil.c
android-client/app/src/main/cpp/libodraw/src/: RawImage.cpp  RawImage.h  ShaderPrograms.cpp  ShaderPrograms.h  Shaders.cpp  Shaders.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  linmath.h
android-client/app/src/main/cpp/libpng/: CHANGES  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  compile  config.guess  config.sub  configure.ac  depcomp  example.c  install-sh  libpng-manual.txt  libpng.3  ltmain.sh  missing  png.h  pngconf.h  pngerror.c  pnginfo.h  pngrtran.c  pngrutil.c  pngtest.c  test-driver
android-client/app/src/main/cpp/libpng/contrib/conftest/: read.dfa  write.dfa
android-client/app/src/main/cpp/libpng/contrib/examples/: pngpixel.c  simpleover.c
android-client/app/src/main/cpp/libpng/contrib/gregbook/: COPYING  LICENSE  Makefile.w32  README  readpng2.c  rpng-win.c  rpng2-win.c  rpng2-x.c  writepng.c
android-client/app/src/main/cpp/libpng/contrib/libtests/: gentests.sh  makepng.c  pngstest.c  pngunknown.c  pngvalid.c  timepng.c
android-client/app/src/main/cpp/libpng/contrib/pngminim/decoder/: pngusr.dfa
android-client/app/src/main/cpp/libpng/contrib/pngminim/encoder/: pngusr.dfa
android-client/app/src/main/cpp/libpng/contrib/pngminim/preader/: pngusr.dfa
android-client/app/src/main/cpp/libpng/contrib/pngminus/: README  png2pnm.c  pnm2png.c
android-client/app/src/main/cpp/libpng/contrib/tools/: png-fix-itxt.c  pngfix.c
android-client/app/src/main/cpp/libpng/contrib/visupng/: README.txt  VisualPng.c
android-client/app/src/main/cpp/libpng/projects/owatcom/: pngconfig.mak
android-client/app/src/main/cpp/libpng/projects/vstudio/pngstest/: pngstest.vcxproj
android-client/app/src/main/cpp/libpng/projects/vstudio/pngtest/: pngtest.vcxproj
android-client/app/src/main/cpp/libpng/scripts/: libtool.m4  ltoptions.m4  pnglibconf.dfa
android-client/app/src/main/cpp/odlib/: file_data.c  file_data.h  od.c  od.h  sprite.c  sprite.h  texture.c  texture.h
android-client/app/src/main/java/threedouble/pacman/: Direction.java  EndGameActivity.java  Game.java  GameOnTouchListener.java  GameRenderer.java  MainActivity.java  Network.java  RendererWrapper.java  Server.java  Service.java
android-client/app/src/main/java/threedouble/pacman/classes/: Direction.java  Game.java  GameOnTouchListener.java  GameRenderer.java  Network.java  Server.java  Service.java
android-client/app/src/main/jni/: renderer_wrapper.h
android-client/app/src/main/res/layout/: activity_end_game.xml  activity_main.xml
android-client/app/src/main/res/values/: strings.xml  styles.xml
android-client/app/src/test/java/threedouble/pacman/: ExampleUnitTest.java
app/: CMakeLists.txt  (+1 more)
common/Messages/: CMakeLists.txt  Messages.cpp  Messages.h  Types.h  test.cpp
common/Messages/Types/: Repeated.cpp  Repeated.h  SimpleTypes.h  Stream.cpp  Stream.h
common/Serialization/: CMakeLists.txt  Messages.cpp  Messages.h  Samples.cpp  Samples.h  TileMap.cpp  TileMap.h  test.cpp
common/Serialization/Serialization/: Serialization.h
common/Serialization/Serialization/src/: Repeated.h  Serializable.cpp  Serializable.h  SimpleTypes.h  Stream.cpp  Stream.h
default-map-creater/: CMakeLists.txt  build.sh  main.cpp
map-editor/: Button.cpp  Button.h  CMakeLists.txt  CMakeLists.txt~  Tile.cpp  Tile.h  Window.cpp  Window.h  build.sh  main.cpp
server/: CMakeLists.txt  Client.h  Game.cpp  Game.h  GameMap.cpp  GameMap.h  GameMapDefault.h  GameRoom.cpp  GameRoom.h  Ghost.cpp  Ghost.h  Network.cpp  Network.h  Player.cpp  Player.h  Service.cpp  Service.h  Socket.cpp  Socket.h  main.cpp
server/Game/: Game.cpp  Game.h  GameRoom.cpp  GameRoom.h  GameRoomsManager.cpp  GameRoomsManager.h  MapManager.cpp  MapManager.h
server/Game/lib/: Game.h  GameMap.h  GameMapDefault.h  GameRoom.h  GameRoomsManager.h  Player.h
server/Game/src/: Game.cpp  GameMap.cpp  GameMapDefault.cpp  GameMapDefault.h  GameRoom.cpp  GameRoomsManager.cpp  Player.cpp
server/GameObjects/: GameObject.cpp  GameObject.h  Ghost.cpp  Ghost.h  GhostsManager.cpp  GhostsManager.h  Pacman.cpp  Pacman.h
server/GameObjects/lib/: Ghost.h  Pacman.h
server/GameObjects/src/: Ghost.cpp  Pacman.cpp
server/Graph/: SetGraph.cpp  SetGraph.h  VirtGraph.h  setUpGraph.cpp  setUpGraph.h
server/NetWork/: Client.cpp  Client.h  Network.cpp  Service.cpp  Service.h  Socket.cpp  Socket.h
server/NetWork/lib/: Client.h  Network.h  Service.h
server/NetWork/src/: Client.cpp  Network.cpp  Service.cpp  Socket.cpp
server/find_shortest_way/: CMakeLists.txt  SetGraph.cpp  main.cpp
server/src/: default-map-one-pacman.map
server/src/maps/: default-map-two-pacman.map
(+75 files in other folders)
